[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "adventofcode2022day01"
path = "day01/main.rs"

[[bin]]
name = "adventofcode2022day02"
path = "day02/main.rs"

[[bin]]
name = "adventofcode2022day03"
path = "day03/main.rs"

[[bin]]
name = "adventofcode2022day04"
path = "day04/main.rs"

[[bin]]
name = "adventofcode2022day05"
path = "day05/main.rs"

[[bin]]
name = "adventofcode2022day06"
path = "day06/main.rs"

[[bin]]
name = "adventofcode2022day07"
path = "day07/main.rs"

[dependencies]
strum = "0.24"
strum_macros = "0.24"
regex = "1"