[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "visualisation_utils"
path = "visualisation_utils/mod.rs"

[[bin]]
name = "adventofcode2022day01"
path = "day01/main.rs"

[[bin]]
name = "adventofcode2022day02"
path = "day02/main.rs"

[[bin]]
name = "adventofcode2022day03"
path = "day03/main.rs"

[[bin]]
name = "adventofcode2022day04"
path = "day04/main.rs"

[[bin]]
name = "adventofcode2022day05"
path = "day05/main.rs"

[[bin]]
name = "adventofcode2022day06"
path = "day06/main.rs"

[[bin]]
name = "adventofcode2022day07"
path = "day07/main.rs"

[[bin]]
name = "adventofcode2022day08"
path = "day08/main.rs"

[[bin]]
name = "adventofcode2022day08vis"
path = "day08/vis.rs"

[[bin]]
name = "adventofcode2022day09"
path = "day09/main.rs"

[[bin]]
name = "adventofcode2022day09vis"
path = "day09/vis.rs"

[[bin]]
name = "adventofcode2022day10"
path = "day10/main.rs"

[[bin]]
name = "adventofcode2022day11"
path = "day11/main.rs"

[[bin]]
name = "adventofcode2022day12"
path = "day12/main.rs"

[[bin]]
name = "adventofcode2022day13"
path = "day13/main.rs"

[[bin]]
name = "adventofcode2022day14"
path = "day14/main.rs"

[[bin]]
name = "adventofcode2022day14vis"
path = "day14/vis.rs"

[[bin]]
name = "adventofcode2022day15"
path = "day15/main.rs"

[[bin]]
name = "adventofcode2022day17"
path = "day17/main.rs"

[[bin]]
name = "adventofcode2022day18"
path = "day18/main.rs"

[[bin]]
name = "adventofcode2022day19"
path = "day19/main.rs"

[[bin]]
name = "adventofcode2022day20"
path = "day20/main.rs"

[[bin]]
name = "adventofcode2022day21"
path = "day21/main.rs"

[dependencies]
strum = "0.24"
strum_macros = "0.24"
regex = "1"
gif = "0.12"
rand = "0.8.5"