[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "adventofcode2023day01"
path = "day01/main.rs"

[[bin]]
name = "adventofcode2023day01s"
path = "day01/main-streamy.rs"

[[bin]]
name = "adventofcode2023day02"
path = "day02/main.rs"

[[bin]]
name = "adventofcode2023day03"
path = "day03/main.rs"

[[bin]]
name = "adventofcode2023day04"
path = "day04/main.rs"

[[bin]]
name = "adventofcode2023day05"
path = "day05/main.rs"

[[bin]]
name = "adventofcode2023day05vis"
path = "day05/vis.rs"

[[bin]]
name = "adventofcode2023day05vis2"
path = "day05/vis2.rs"

[dependencies]
adventofcode2022 = { path = "../2022" }

[[bin]]
name = "adventofcode2023day06"
path = "day06/main.rs"

[[bin]]
name = "adventofcode2023day07"
path = "day07/main.rs"

[[bin]]
name = "adventofcode2023day08"
path = "day08/main.rs"

[[bin]]
name = "adventofcode2023day09"
path = "day09/main.rs"

[[bin]]
name = "adventofcode2023day10"
path = "day10/main.rs"
